# Max

./: .gitignore  AGENTS.md  README.md  alembic.ini  check_deps.py  cli.py  conda-env-backup.txt  conda-env.yml  main2.py  max.py  pyproject.toml  pytest.ini  requirements.txt  test.ipynb  test.py  test_video_agent.py  test_youtube_summary.py
agents/: __init__.py  chatbot_agent.py  enhanced_orchestrator_agent.py  mcp_enhanced_workflow.py  music_agent.py  orchestrator_agent.py  research_agent.py  video_agent.py  webpage_agent.py  writer_agent.py
ai_tools/: __init__.py  agent_tools.py  ai_doc_webpage_summarizer.py  ai_music_generation.py  ai_research_agent.py  ai_rumble_summary.py  ai_webpage_research_agent.py  ai_youtube_summary.py  crew_tools.py  lc_tools.py  tool_schemas.py
ai_tools/ai_bookwriter/: agents.py  ai_tools.py  bookwriter.py  lang_main.py  main.py  tools.py
ai_tools/ai_llm/: base_chat_mode.py  llm_analytical.py  llm_casual.py  llm_creative.py  llm_critique.py  llm_professional.py  llm_reflecting.py
ai_tools/ai_write_assistent/: agents.py  ai_tools.py  helpers.py  writer.py
ai_tools/speech/: __init__.py  ai_speech.py  app_speech.py  speech_to_text.py  text_to_speech.py
alembic/: env.py
api/: config.py  dependencies.py  main_api.py  middleware.py  models.py  schemas.py
api/routers/: ai_router.py  enhanced_ai_router.py  system_router.py
assistents/: ai_assistent.py  enhanced_ai_assistant.py  system_assistent.py
docs/: ENHANCEMENT_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  LLM_PROVIDER_README.md  OPTIMIZATION_REPORT.md  chatbot_modes.md  external_libraries_analysis.md  plan.md
docs/technical/: AI_ASSISTANT_CONSOLIDATION.md  AI_ASSISTANT_CONSOLIDATION_FINAL_SUMMARY.md  AI_ASSISTANT_CONSOLIDATION_FIX.md  AI_ASSISTANT_CONSOLIDATION_SUMMARY.md  CONSOLIDATED_ORCHESTRATOR.md  FUTURE_ENHANCEMENTS.md  LANGCHAIN_UPGRADE.md  MCP_ENHANCED_TOOLS.md  MCP_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_CONSOLIDATION.md  ORCHESTRATOR_CONSOLIDATION_SUMMARY.md
sandbox/: coqui_cloning.py  latent_space_activation.py  main.py  main2.py  main_sandbox.py  mcp_workflow_demo.py  test_ai_assistant_consolidation.py  test_command_registration.py  test_consolidated_orchestrator.py  test_mcp_tools.py  test_orchestrator_consolidation.py  tester.py
sandbox/ai_experiments/: data_analysis_agent.py  latent_space_activation.py  latent_space_explorer.py  multi_agent_workflow.py  self_correction_loop.py  sentiment_analyzer.py  text_summarization_agent.py  tic_tac_toe_ai.py
sandbox/speech_experiments/: ai_speech_sandbox.py  enhanced_voice_assistant.py  llm_to_tts_integration.py  stt_to_llm_integration.py  xtts_sandbox.py  (+1 more)
tests/: conftest.py  final_demo.py  quick_test.py  simple_test.py  test_agents_and_tools.py  test_api_endpoints.py  test_chatbot_modes.py  test_conversation_modes.py  test_enhancements.py  test_imports.py  test_llm_providers.py  test_orchestrator_contracts.py  test_shared_summarize_utils_lcel.py  test_speech_to_text.py  test_tts_model.py
utils/: cache.py  call_commands.py  database.py  llm_manager.py  loggers.py  system_commands.py
(+5 files in other folders)
